# orion-agent

./: .env.example  .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  FUNDING.md  LICENSE  LICENSE-ENTERPRISE.md  Orion.bat  README.md  ROADMAP.md  SECURITY.md  SUPPORTERS.md  launch.py  orion.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
.local/: e2e_live_test_results.md  operational_test_results.md  phase4e_audit_results.md
.sandbox/: Dockerfile
.windsurf/workflows/: local-resources.md  pre-push-security-scan.md
data/: egress_config_default.yaml  oauth_defaults.json
data/roles/: ceo.yaml  customer-service-manager.yaml  data-analyst.yaml  devops-runner.yaml  executive-assistant.yaml  financial-analyst.yaml  full-auto.yaml  hr-manager.yaml  it-systems-administrator.yaml  junior-developer.yaml  legal-compliance-officer.yaml  marketing-manager.yaml  night-coder.yaml  office-administrator.yaml  professional-forex-trader.yaml  project-manager.yaml  receptionist.yaml  researcher.yaml  sales-representative.yaml  senior-developer.yaml  social-media-content-creator.yaml
data/seed/: curriculum.json  intent_exemplars.json  skill_groups.yaml
docker/: Dockerfile  Dockerfile.egress  Dockerfile.web  docker-compose.yml  entrypoint.sh  entrypoint_egress.sh
docker/stacks/: Dockerfile.base  Dockerfile.go  Dockerfile.node  Dockerfile.python  Dockerfile.rust
docs/: AEGIS.md  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  GOOGLE_SETUP.md  INSTALLATION.md  INTEGRATIONS.md  LEARNING_SYSTEM.md  MEMORY_SYSTEM.md  NETWORK_SECURITY.md  README.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/architecture/: ARA-001-autonomous-role-architecture.md  ARA-002-implementation-plan.md  ARA-003-completion-plan.md  ARA-004-completion-report.md  ARA-005-context-loss-investigation.md  ARA-006-skills-architecture.md  ARA-dashboard-mockup.html  NLA-001-natural-language-architecture.md  NLA-002-implementation-plan.md  ORION-MASTER-ARCHITECTURE.md
examples/: curriculum_demo.json
orion-web/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
orion-web/design/: tokens.json
orion-web/src/app/: layout.tsx  page.tsx
orion-web/src/components/: AegisApprovalModal.tsx  AegisApprovalProvider.tsx  AegisInfo.tsx  BrandBlock.tsx  Button.tsx  ChatInterface.tsx  Hero.tsx  NetworkDashboard.tsx  SettingsPanel.tsx  Shell.tsx  StatusRow.tsx
orion-web/src/design/: tokens.css
orion-web/src/lib/: api.ts
orion-web/src/visuals/: AegisGridBackdrop.tsx  Constellation.tsx  OrionCore.tsx  Starfield.tsx
scripts/: pre-push-check.ps1  run_training_e2e.py
src/.orion/tags_cache/: cache.db-shm  cache.db-wal
src/orion/: __init__.py  __main__.py  _version.py  data_path.py
src/orion/api/: __init__.py  _shared.py  middleware.py  server.py
src/orion/ara/: __init__.py  activity_logger.py  aegis_gate.py  api.py  audit_log.py  auth.py  checkpoint.py  cli_commands.py  daemon.py  daemon_launcher.py  dashboard.py  drift_monitor.py  execution.py  execution_config.py  execution_feedback.py  execution_memory.py  execution_step.py  feedback_store.py  goal_engine.py  goal_queue.py  keychain.py  lifecycle.py  message_bridge.py  notifications.py  ollama_provider.py  performance_metrics.py  proactive_learner.py  promotion.py  prompt_guard.py  recovery.py  role_profile.py  ruff_tool.py  session.py  skill.py  skill_guard.py  skill_library.py  task_executor.py  user_isolation.py
src/orion/bridges/: __init__.py  base.py  discord_bridge.py  (+2 more)
tests/: __init__.py  conftest.py  test_activity_logger.py  test_activity_messaging.py  test_activity_persistence.py  test_aegis_network_access.py  test_api_performance.py  test_cli_performance.py  test_e2e_learning_loop.py  test_egress_antigravity.py  test_egress_approval_queue.py  test_egress_audit.py  test_egress_config.py  test_egress_dns_filter.py  test_egress_google_credentials.py  test_egress_inspector.py  test_egress_proxy.py  test_egress_rate_limiter.py  test_execution_config.py  test_execution_feedback.py  test_execution_memory.py  test_execution_step.py  test_google_oauth_config.py  test_google_services.py  test_google_sign_in.py  test_graduated_access_e2e.py  test_message_bridge.py  test_messaging_notifications.py  test_orchestrator.py  test_performance_metrics.py  test_phase2_e2e.py  test_phase4a_e2e.py  test_phase4b_e2e.py  test_phase4c_e2e.py  test_phase4e_e2e.py  test_pin_api_e2e.py  test_proactive_learner.py  test_registry_whitelist.py  test_review_messaging.py  test_ruff_tool.py  (+8 more)
tests/ara/: __init__.py  conftest.py  test_aegis_gate.py  test_api.py  test_audit_log.py  test_auth.py  test_checkpoint.py  test_cli_commands.py  test_daemon.py  test_dashboard.py  test_drift_monitor.py  test_e2e.py  test_execution.py  test_feedback_store.py  test_goal_engine.py  test_goal_queue.py  test_keychain.py  test_lifecycle.py  test_notifications.py  test_phase12_commands.py  test_promotion.py  test_prompt_guard.py  test_recovery.py  test_role_management.py  test_role_profile.py  test_sandbox_security.py  test_secret_scanner.py  test_session.py  test_skill.py  test_skill_guard.py  test_skill_library.py  test_user_isolation.py  test_write_limits.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_benchmark.py  test_brief_builder.py  test_clarification_detector.py  test_cli.py  test_context.py  test_conversation_buffer.py  test_curriculum.py  test_doctor.py  test_edit_validator.py  test_editing.py  test_embeddings.py  test_english_foundation.py  test_exemplar_bank.py  test_extract_json.py  test_git_safety.py  test_governance.py  test_intent_classifier.py  test_knowledge_pack.py  test_learning_integration.py  test_llm_config.py  test_memory_engine.py  test_nla_benchmark.py  test_platforms.py  test_production.py  test_providers.py  test_request_analyzer.py  test_router.py  test_scout.py  test_secure_store.py  test_settings_manager.py  test_workspace_sandbox.py
(+216 files in other folders)
