[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-agent"
version = "6.6.0"
description = "Self-improving, multi-agent AI coding assistant with persistent memory and continuous learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Orion Team" }]
keywords = ["ai", "coding-assistant", "multi-agent", "llm", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "openai>=1.0",
    "anthropic>=0.18",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "tree-sitter>=0.20",
]

[project.optional-dependencies]
security = [
    "keyring>=25.0",
    "cryptography>=42.0",
]
cloud = [
    "google-generativeai>=0.3",
    "groq>=0.4",
    "cohere>=5.0",
    "together>=0.2",
    "mistralai>=0.1",
    "replicate>=0.25",
]
voice = [
    "elevenlabs>=1.0",
    "edge-tts>=6.1",
    "piper-tts>=1.2",
    "openai-whisper>=20231117",
    "vosk>=0.3",
    "deepgram-sdk>=3.0",
]
web = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "websockets>=12.0",
    "authlib>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "bandit>=1.7",
    "safety>=3.0",
    "pre-commit>=3.6",
]
all = ["orion-agent[security,cloud,voice,web,dev]"]

[project.scripts]
orion = "orion.cli.app:main"

[project.urls]
Homepage = "https://github.com/orion-agent/orion"
Documentation = "https://github.com/orion-agent/orion/docs"
Repository = "https://github.com/orion-agent/orion"
Issues = "https://github.com/orion-agent/orion/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
    "asyncio: marks async tests",
]

[tool.pytest-asyncio]
mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/orion"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
