[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orion-agent"
version = "7.4.0-beta"
description = "Multi-agent AI coding assistant with persistent memory, knowledge distillation, and AEGIS governance"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Phoenix Link (Pty) Ltd", email = "info@phoenixlink.co.za"}
]
maintainers = [
    {name = "Phoenix Link (Pty) Ltd", email = "info@phoenixlink.co.za"}
]
keywords = ["ai", "coding-assistant", "multi-agent", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0",
    "anthropic>=0.18",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "tree-sitter>=0.20",
    "networkx>=3.0",
]

[project.optional-dependencies]
security = [
    "keyring>=25.0",
    "cryptography>=42.0",
]
cloud = [
    "google-generativeai>=0.3",
    "groq>=0.4",
    "cohere>=5.0",
    "together>=0.2",
    "mistralai>=0.1",
    "replicate>=0.25",
]
voice = [
    "elevenlabs>=1.0",
    "edge-tts>=6.1",
    "piper-tts>=1.2",
    "openai-whisper>=20231117",
    "vosk>=0.3",
    "deepgram-sdk>=3.0",
]
web = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "websockets>=12.0",
    "authlib>=1.3",
]
training = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "bandit>=1.7",
    "safety>=3.0",
    "pre-commit>=3.6",
]
all = ["orion-agent[security,cloud,voice,web,dev,training]"]

[project.scripts]
orion = "orion.cli.app:main"

[project.urls]
Homepage = "https://phoenixlink.co.za/orion"
Documentation = "https://docs.phoenixlink.co.za/orion"
Repository = "https://github.com/phoenixlink-cloud/orion-agent"
Issues = "https://github.com/phoenixlink-cloud/orion-agent/issues"
"Commercial Licensing" = "https://phoenixlink.co.za/orion/licensing"

[tool.hatch.build.targets.wheel]
packages = ["src/orion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
    "asyncio: marks async tests",
]

[tool.pytest-asyncio]
mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module-import-not-at-top (intentional in tests/lazy imports)
    "E701",   # multiple-statements-on-one-line
    "B904",   # raise-without-from-inside-except (deferred cleanup)
    "B017",   # assert-raises-exception (acceptable in tests)
    "B027",   # empty-method-without-abstract-decorator
    "SIM102", # collapsible-if (readability preference)
    "SIM105", # suppressible-exception (readability preference)
    "SIM110", # reimplemented-builtin
    "SIM115", # open-file-with-context-handler
    "SIM117", # multiple-with-statements
    "UP035",  # deprecated-import (typing compat for 3.10)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",  # test function names may include uppercase (e.g. test_reserved_device_CON)
    "N806",  # variable names in tests (e.g. MockRouter)
    "F401",  # unused imports in test fixtures
    "F841",  # unused variables in tests (side-effect constructors)
    "B905",  # zip-without-explicit-strict in tests
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/orion"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70
